--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -7,8 +7,7 @@
   "main": "index.js",
   "dependencies": {
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "tslib": "2.1.0"
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
@@ -21,8 +20,10 @@
     "@types/react-dom": "17.0.0",
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
+    "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "7.0.0",
     "fork-ts-checker-webpack-plugin": "6.0.8",
+    "html-webpack-plugin": "4.5.1",
     "source-map-loader": "2.0.0",
     "typescript": "4.1.3",
     "webpack": "5.12.2",
