--- a/tsreact/tsconfig.json
+++ b/tsreact/tsconfig.json
@@ -14,6 +14,10 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "isolatedModules": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "typeRoots": [
+      "./styles",
+      "./node_modules/@types"
+    ]
   }
 }
