--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -18,19 +18,20 @@
     "@babel/runtime": "7.12.5",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "autoprefixer": "^10.2.1",
+    "autoprefixer": "10.2.1",
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.1",
+    "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.1.0",
     "html-webpack-plugin": "4.5.1",
     "mini-css-extract-plugin": "1.3.4",
     "postcss": "8.2.4",
     "postcss-loader": "4.1.0",
     "resolve-url-loader": "3.1.2",
-    "sass": "^1.32.4",
+    "sass": "1.32.4",
     "sass-loader": "10.1.1",
     "source-map-loader": "2.0.0",
     "typescript": "4.1.3",
