--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -28,6 +28,8 @@
     "fork-ts-checker-webpack-plugin": "6.1.0",
     "html-webpack-plugin": "4.5.1",
     "mini-css-extract-plugin": "1.3.4",
+    "node-sass": "5.0.0",
+    "node-sass-json-importer": "4.3.0",
     "postcss": "8.2.4",
     "postcss-loader": "4.1.0",
     "resolve-url-loader": "3.1.2",
