--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -6,6 +6,8 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
+    "bootstrap": ">=5.0.0 || ~5.0.0-beta1",
+    "classnames": "2.2.6",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
@@ -16,9 +18,10 @@
     "@babel/preset-react": "7.12.10",
     "@babel/preset-typescript": "7.12.7",
     "@babel/runtime": "7.12.5",
+    "@types/classnames": "2.2.11",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "autoprefixer": "10.2.1",
+    "autoprefixer": "10.2.3",
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
     "clean-webpack-plugin": "3.0.0",
@@ -31,14 +34,14 @@
     "node-sass": "5.0.0",
     "node-sass-json-importer": "4.3.0",
     "postcss": "8.2.4",
-    "postcss-loader": "4.1.0",
+    "postcss-loader": "4.2.0",
     "resolve-url-loader": "3.1.2",
-    "sass": "1.32.4",
+    "sass": "1.32.5",
     "sass-loader": "10.1.1",
     "source-map-loader": "2.0.0",
     "typescript": "4.1.3",
-    "webpack": "5.15.0",
-    "webpack-cli": "4.3.1",
+    "webpack": "5.16.0",
+    "webpack-cli": "4.4.0",
     "webpack-dev-server": ">=4.0.0 || ~4.0.0-beta.0"
   },
   "scripts": {
