--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -7,7 +7,9 @@
   "main": "index.js",
   "dependencies": {
     "bootstrap": ">=5.0.0 || ~5.0.0-beta1",
+    "bootstrap-icons": "1.3.0",
     "classnames": "2.2.6",
+    "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   },
@@ -19,6 +21,7 @@
     "@babel/preset-typescript": "7.12.7",
     "@babel/runtime": "7.12.5",
     "@types/classnames": "2.2.11",
+    "@types/prop-types": "15.7.3",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "autoprefixer": "10.2.3",
@@ -39,6 +42,7 @@
     "sass": "1.32.5",
     "sass-loader": "10.1.1",
     "source-map-loader": "2.0.0",
+    "svg-spritemap-webpack-plugin": "3.8.3",
     "typescript": "4.1.3",
     "webpack": "5.16.0",
     "webpack-cli": "4.4.0",
