--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -11,10 +11,12 @@
     "classnames": "2.2.6",
     "prop-types": "15.7.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "redux": "4.0.5"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
+    "@babel/plugin-proposal-class-properties": "7.12.1",
     "@babel/plugin-transform-runtime": "7.12.10",
     "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.12.10",
@@ -44,7 +46,7 @@
     "source-map-loader": "2.0.0",
     "svg-spritemap-webpack-plugin": "3.8.3",
     "typescript": "4.1.3",
-    "webpack": "5.16.0",
+    "webpack": "5.17.0",
     "webpack-cli": "4.4.0",
     "webpack-dev-server": ">=4.0.0 || ~4.0.0-beta.0"
   },
