--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -9,10 +9,13 @@
     "bootstrap": ">=5.0.0 || ~5.0.0-beta1",
     "bootstrap-icons": "1.3.0",
     "classnames": "2.2.6",
+    "lodash": "4.17.20",
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "redux": "4.0.5"
+    "react-redux": "7.2.2",
+    "redux": "4.0.5",
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
@@ -23,9 +26,11 @@
     "@babel/preset-typescript": "7.12.7",
     "@babel/runtime": "7.12.5",
     "@types/classnames": "2.2.11",
+    "@types/lodash": "4.14.168",
     "@types/prop-types": "15.7.3",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/react-redux": "7.1.16",
     "autoprefixer": "10.2.3",
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
@@ -46,7 +51,7 @@
     "source-map-loader": "2.0.0",
     "svg-spritemap-webpack-plugin": "3.8.3",
     "typescript": "4.1.3",
-    "webpack": "5.17.0",
+    "webpack": "5.18.0",
     "webpack-cli": "4.4.0",
     "webpack-dev-server": ">=4.0.0 || ~4.0.0-beta.0"
   },
