--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -15,6 +15,7 @@
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
     "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
     "reselect": "4.0.0"
   },
   "devDependencies": {
@@ -40,7 +41,7 @@
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.1.0",
     "html-webpack-plugin": "4.5.1",
-    "mini-css-extract-plugin": "1.3.4",
+    "mini-css-extract-plugin": "1.3.5",
     "node-sass": "5.0.0",
     "node-sass-json-importer": "4.3.0",
     "postcss": "8.2.4",
