--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "bootstrap": ">=5.0.0 || ~5.0.0-beta1",
+    "bootstrap": ">=5.0.0 || ~5.0.0-beta2",
     "bootstrap-icons": "1.3.0",
     "classnames": "2.2.6",
     "lodash": "4.17.20",
@@ -16,44 +16,45 @@
     "react-redux": "7.2.2",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
+    "redux-thunk": "2.3.0",
     "reselect": "4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.12.10",
-    "@babel/plugin-proposal-class-properties": "7.12.1",
-    "@babel/plugin-transform-runtime": "7.12.10",
-    "@babel/preset-env": "7.12.11",
-    "@babel/preset-react": "7.12.10",
-    "@babel/preset-typescript": "7.12.7",
-    "@babel/runtime": "7.12.5",
+    "@babel/core": "7.12.17",
+    "@babel/plugin-proposal-class-properties": "7.12.13",
+    "@babel/plugin-transform-runtime": "7.12.17",
+    "@babel/preset-env": "7.12.17",
+    "@babel/preset-react": "7.12.13",
+    "@babel/preset-typescript": "7.12.17",
+    "@babel/runtime": "7.12.18",
     "@types/classnames": "2.2.11",
     "@types/lodash": "4.14.168",
     "@types/prop-types": "15.7.3",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.1",
     "@types/react-redux": "7.1.16",
-    "autoprefixer": "10.2.3",
+    "autoprefixer": "10.2.4",
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "7.0.0",
-    "css-loader": "5.0.1",
+    "css-loader": "5.0.2",
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.1.0",
-    "html-webpack-plugin": "4.5.1",
-    "mini-css-extract-plugin": "1.3.5",
+    "html-webpack-plugin": "5.2.0",
+    "mini-css-extract-plugin": "1.3.8",
     "node-sass": "5.0.0",
     "node-sass-json-importer": "4.3.0",
-    "postcss": "8.2.4",
-    "postcss-loader": "4.2.0",
+    "postcss": "8.2.6",
+    "postcss-loader": "5.0.0",
     "resolve-url-loader": "3.1.2",
-    "sass": "1.32.5",
-    "sass-loader": "10.1.1",
-    "source-map-loader": "2.0.0",
-    "svg-spritemap-webpack-plugin": "3.8.3",
-    "typescript": "4.1.3",
-    "webpack": "5.18.0",
-    "webpack-cli": "4.4.0",
+    "sass": "1.32.8",
+    "sass-loader": "11.0.1",
+    "source-map-loader": "2.0.1",
+    "svg-spritemap-webpack-plugin": "3.9.0",
+    "typescript": "4.1.5",
+    "webpack": "5.23.0",
+    "webpack-cli": "4.5.0",
     "webpack-dev-server": ">=4.0.0 || ~4.0.0-beta.0"
   },
   "scripts": {
