react.ts Introduced Text component selecting text from i18n file.

--- a/tsreact/tsconfig.json
+++ b/tsreact/tsconfig.json
@@ -15,6 +15,7 @@
     "moduleResolution": "node",
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
+    "experimentalDecorators": true,
     "typeRoots": ["./styles", "./node_modules/@types"],
     "paths": {
       "src/*": ["src/*"],
