--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
+    "@types/react-router-dom": "5.1.7",
     "bootstrap": ">=5.0.0 || ~5.0.0-beta2",
     "bootstrap-icons": "1.3.0",
     "classnames": "2.2.6",
@@ -14,6 +15,9 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
+    "react-router": "5.2.0",
+    "react-router-config": "5.1.1",
+    "react-router-dom": "5.2.0",
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
@@ -33,6 +37,7 @@
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
     "@types/react-redux": "7.1.16",
+    "@types/react-router-config": "5.0.2",
     "autoprefixer": "10.2.4",
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
