--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -7,8 +7,9 @@
   "main": "index.js",
   "dependencies": {
     "@types/react-router-dom": "5.1.7",
+    "@types/superagent": "4.1.10",
     "bootstrap": ">=5.0.0 || ~5.0.0-beta2",
-    "bootstrap-icons": "1.3.0",
+    "bootstrap-icons": "1.4.0",
     "classnames": "2.2.6",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
@@ -21,16 +22,18 @@
     "redux": "4.0.5",
     "redux-devtools-extension": "2.13.8",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "superagent": "6.1.0",
+    "superagent-no-cache": "0.1.1"
   },
   "devDependencies": {
-    "@babel/core": "7.12.17",
-    "@babel/plugin-proposal-class-properties": "7.12.13",
-    "@babel/plugin-transform-runtime": "7.12.17",
-    "@babel/preset-env": "7.12.17",
+    "@babel/core": "7.13.1",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-transform-runtime": "7.13.7",
+    "@babel/preset-env": "7.13.5",
     "@babel/preset-react": "7.12.13",
-    "@babel/preset-typescript": "7.12.17",
-    "@babel/runtime": "7.12.18",
+    "@babel/preset-typescript": "7.13.0",
+    "@babel/runtime": "7.13.7",
     "@types/classnames": "2.2.11",
     "@types/lodash": "4.14.168",
     "@types/prop-types": "15.7.3",
@@ -38,6 +41,7 @@
     "@types/react-dom": "17.0.1",
     "@types/react-redux": "7.1.16",
     "@types/react-router-config": "5.0.2",
+    "@types/superagent-no-cache": "0.1.2",
     "autoprefixer": "10.2.4",
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
@@ -57,8 +61,8 @@
     "sass-loader": "11.0.1",
     "source-map-loader": "2.0.1",
     "svg-spritemap-webpack-plugin": "3.9.0",
-    "typescript": "4.1.5",
-    "webpack": "5.23.0",
+    "typescript": "4.2.2",
+    "webpack": "5.24.1",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": ">=4.0.0 || ~4.0.0-beta.0"
   },
