react.ts Added Jest. Supported merge of slice into domain when reducing.

--- a/tsreact/config.json
+++ b/tsreact/config.json
@@ -2,6 +2,13 @@
   "endpoints": {
     "main": "https://clinicaltables.nlm.nih.gov/api/npi_idv/v3"
   },
+
+  "data": {
+    "npi": {
+      "pageSize": 10
+    }
+  },
+
   "dev": {
     "redux": {
     }
