--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-typescript": "7.13.0",
     "@babel/runtime": "7.13.7",
     "@types/classnames": "2.2.11",
+    "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
     "@types/prop-types": "15.7.3",
     "@types/react": "17.0.2",
@@ -51,6 +52,7 @@
     "file-loader": "6.2.0",
     "fork-ts-checker-webpack-plugin": "6.1.0",
     "html-webpack-plugin": "5.2.0",
+    "jest": "26.6.3",
     "mini-css-extract-plugin": "1.3.8",
     "node-sass": "5.0.0",
     "node-sass-json-importer": "4.3.0",
@@ -61,13 +63,15 @@
     "sass-loader": "11.0.1",
     "source-map-loader": "2.0.1",
     "svg-spritemap-webpack-plugin": "3.9.0",
+    "ts-jest": "26.5.2",
     "typescript": "4.2.2",
-    "webpack": "5.24.1",
+    "webpack": "5.24.2",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": ">=4.0.0 || ~4.0.0-beta.0"
   },
   "scripts": {
     "build": "webpack --mode=production --config webpack.config.js",
-    "start": "webpack-dev-server --hot --env=development"
+    "start": "webpack-dev-server --hot --env=development",
+    "test": "jest"
   }
 }
