--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -15,6 +15,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-paginate": "7.1.0",
     "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-config": "5.1.1",
@@ -40,6 +41,7 @@
     "@types/prop-types": "15.7.3",
     "@types/react": "17.0.2",
     "@types/react-dom": "17.0.1",
+    "@types/react-paginate": "6.2.1",
     "@types/react-redux": "7.1.16",
     "@types/react-router-config": "5.0.2",
     "@types/superagent-no-cache": "0.1.2",
