--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -11,6 +11,7 @@
     "bootstrap": ">=5.0.0 || ~5.0.0-beta2",
     "bootstrap-icons": "1.4.0",
     "classnames": "2.2.6",
+    "history": "4.10.1",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
     "react": "17.0.1",
@@ -36,6 +37,7 @@
     "@babel/preset-typescript": "7.13.0",
     "@babel/runtime": "7.13.7",
     "@types/classnames": "2.2.11",
+    "@types/history": "4.7.8",
     "@types/jest": "26.0.20",
     "@types/lodash": "4.14.168",
     "@types/prop-types": "15.7.3",
