--- a/tsreact/package.json
+++ b/tsreact/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "1.4.0",
     "classnames": "2.2.6",
     "history": "4.10.1",
+    "immer": "8.0.1",
     "lodash": "4.17.21",
     "prop-types": "15.7.2",
     "react": "17.0.1",
@@ -29,13 +30,13 @@
     "superagent-no-cache": "0.1.1"
   },
   "devDependencies": {
-    "@babel/core": "7.13.1",
+    "@babel/core": "7.13.8",
     "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/plugin-transform-runtime": "7.13.7",
-    "@babel/preset-env": "7.13.5",
+    "@babel/plugin-transform-runtime": "7.13.9",
+    "@babel/preset-env": "7.13.9",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.13.0",
-    "@babel/runtime": "7.13.7",
+    "@babel/runtime": "7.13.9",
     "@types/classnames": "2.2.11",
     "@types/history": "4.7.8",
     "@types/jest": "26.0.20",
@@ -51,25 +52,25 @@
     "babel-loader": "8.2.2",
     "browserslist": ">=4",
     "clean-webpack-plugin": "3.0.0",
-    "copy-webpack-plugin": "7.0.0",
-    "css-loader": "5.0.2",
+    "copy-webpack-plugin": "8.0.0",
+    "css-loader": "5.1.1",
     "file-loader": "6.2.0",
-    "fork-ts-checker-webpack-plugin": "6.1.0",
+    "fork-ts-checker-webpack-plugin": "6.1.1",
     "html-webpack-plugin": "5.2.0",
     "jest": "26.6.3",
-    "mini-css-extract-plugin": "1.3.8",
+    "mini-css-extract-plugin": "1.3.9",
     "node-sass": "5.0.0",
     "node-sass-json-importer": "4.3.0",
-    "postcss": "8.2.6",
+    "postcss": "8.2.7",
     "postcss-loader": "5.0.0",
     "resolve-url-loader": "3.1.2",
     "sass": "1.32.8",
     "sass-loader": "11.0.1",
     "source-map-loader": "2.0.1",
     "svg-spritemap-webpack-plugin": "3.9.0",
-    "ts-jest": "26.5.2",
-    "typescript": "4.2.2",
-    "webpack": "5.24.2",
+    "ts-jest": "26.5.3",
+    "typescript": "4.2.3",
+    "webpack": "5.24.3",
     "webpack-cli": "4.5.0",
     "webpack-dev-server": ">=4.0.0 || ~4.0.0-beta.0"
   },
