migration Resolved problems with actual Webpack build

--- a/config.json
+++ b/config.json
@@ -1,19 +1,6 @@
 {
   "publicPath": "/",
-
   "endpoints": {
-    "main": "https://clinicaltables.nlm.nih.gov/api/npi_idv/v3"
-  },
-
-  "data": {
-    "npi": {
-      "pageSize": 10,
-      "pagesFetch": 8
-    }
-  },
-
-  "dev": {
-    "redux": {
-    }
+    "main": "/api"
   }
 }
