migration Better configuration, index HTML template, and root React node

--- a/config.json
+++ b/config.json
@@ -1,5 +1,9 @@
 {
   "publicPath": "/",
+  "reactRootId": "react-application",
+  "pageTitle": "Sample React Application",
+  "defaultLang": "en",
+  "globalLangVariable": "APP_LANG",
   "endpoints": {
     "main": "/api"
   }
